--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -1,4 +1,5 @@
 $lightGray: #e4e4e4;
+$darkGray: #c2c2c2;
 
 html {
   height: 100%;
@@ -15,58 +16,22 @@ footer {
   text-align: center;
   padding: .5em 0;
 }
-nav {
-  position: fixed;
-  background: #fff;
-  padding: 1em;
-  width: 100%;
-}
 header {
-  background: url('https://wallpaperscraft.com/image/background_blue_host_vector_minimalism_38910_3840x1200.jpg') no-repeat center center fixed;
-  height: 20em;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  .headerText {
-    h1 {
-      font-size: 4em;
-      font-weight: bold;
-    }
-    span.subtext {
-      letter-spacing: -.05em;
-    }
-    color: #fff;
-    text-align: center;
-    text-shadow: 0px 1px 2px #000;
+  background-color: $lightGray;
+  padding: .5em;
+  h1 {
+    display:inline;
   }
-}
-section.features{
-  margin: 2em 0;
-  .feature {
-    padding: 1em;
-    h2 {
-      text-align: center;
-      margin-bottom: 1em;
-    }
-    p {
-      font-size: .75em;
-    }
-  }
-}
-section.devs{
-  margin: 2em 0;
-  .profile {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    h3 {
-      font-size: 1.2em;
-      margin-bottom: 0;
-    }
-    p {
-      font-size: .8em;
+  ul.nav {
+    float: right;
+    display: inline;
+    li{
+      border: 1px solid $darkGray;
+      padding: .75em;
+      display: inline !important;
+      a{
+        display: inline !important;
+      }
     }
   }
 }
